--- a/package.json
+++ b/package.json
@@ -21,15 +21,15 @@
     "dotenv": "^8.2.0",
     "ejs": "~2.6.1",
     "express": "^4.17.1",
-    "express-fileupload": "^1.1.7-alpha.3",
+    "express-fileupload": "^1.2.0",
     "express-session": "^1.16.2",
     "form-data": "^3.0.0",
-    "google-auth-library": "^6.0.0",
+    "google-auth-library": "^6.0.6",
     "http-errors": "~1.6.3",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^2.1.0",
-    "sequelize": "^5.22.0",
+    "sequelize": "^5.22.3",
     "sweetalert2": "^8.19.0"
   }
 }
